--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.9.0",
     "prettier": "^1.13.4",
+    "sanitize.css": "^5.0.0",
     "sass-loader": "^7.0.2",
+    "stylelint": "^9.2.1",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-scss": "^3.1.0",
+    "stylelint-webpack-plugin": "^0.10.5",
     "vue-eslint-parser": "^2.0.3"
   }
 }
