--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.9.0",
+    "nuxt-firebase": "0.0.3",
     "prettier": "^1.13.4",
     "sanitize.css": "^5.0.0",
     "sass-loader": "^7.0.2",
