--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nuxt",
+    "build": "nuxt build --spa",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
@@ -19,7 +20,9 @@
   },
   "homepage": "https://github.com/makura3/Vue-test-corporate#readme",
   "dependencies": {
-    "nuxt": "^1.4.0"
+    "@nuxtjs/axios": "^5.3.1",
+    "nuxt": "^1.4.0",
+    "vuexfire": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
@@ -29,7 +32,6 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.9.0",
-    "nuxt-firebase": "0.0.3",
     "prettier": "^1.13.4",
     "sanitize.css": "^5.0.0",
     "sass-loader": "^7.0.2",
