--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/makura3/Vue-test-corporate#readme",
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
+    "firebase": "^5.0.4",
     "nuxt": "^1.4.0",
     "vuexfire": "^2.3.0"
   },
