--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.9.0",
+    "nuxt-sass-resources-loader": "^2.0.2",
     "prettier": "^1.13.4",
     "sanitize.css": "^5.0.0",
     "sass-loader": "^7.0.2",
