--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,6 +4,9 @@
   ],
   "extends": "stylelint-config-standard",
   "rules": {
-    "scss/dollar-variable-colon-space-after": "always"
+    "scss/dollar-variable-colon-space-after": "always",
+    "at-rule-no-unknown": [true, {
+      "ignoreAtRules": ["function", "if", "each", "include", "mixin"]
+    }]
   }
 }
