--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/makura3/Vue-test-corporate#readme",
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
+    "@nuxtjs/font-awesome": "^1.0.3",
     "firebase": "^4.12.1",
     "nuxt": "^1.4.0",
     "vuexfire": "^2.3.0"
