--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@nuxtjs/axios": "^5.3.1",
     "@nuxtjs/font-awesome": "^1.0.3",
     "firebase": "^4.12.1",
-    "nuxt": "^1.4.0",
-    "vuexfire": "^2.3.0"
+    "nuxt": "^1.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
