--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "nuxt": "^1.4.0"
   },
   "devDependencies": {
+    "@createjs/easeljs": "^2.0.0-beta.2",
+    "@createjs/tweenjs": "^2.0.0-beta.1",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
