--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-vue": "^4.5.0",
+    "file-loader": "^1.1.11",
     "node-sass": "^4.9.0",
     "nuxt-sass-resources-loader": "^2.0.2",
     "prettier": "^1.13.4",
@@ -43,6 +44,7 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
+    "url-loader": "^1.0.1",
     "vue-eslint-parser": "^2.0.3"
   }
 }
